gitlab/deploy2pvc.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: gitlab-deployment2
spec:
  replicas: 1
  selector:
    matchLabels:
      app: gitlab
  template:
    metadata:
      labels:
        app: gitlab
    spec:
      volumes:
      - name: gitlab-config
        persistentVolumeClaim:
          claimName: gitlab-config-pvcs
      - name: gitlab-logs
        persistentVolumeClaim:
          claimName: gitlab-logs-pvcs
      - name: gitlab-data
        persistentVolumeClaim:
          claimName: gitlab-data-pvcs
      containers:
      - name: gitlab-container
        image: gitlab/gitlab-ce:latest
        ports:
        - containerPort: 80
        - containerPort: 22
        volumeMounts:
        - name: gitlab-config
          mountPath: /etc/gitlab
        - name: gitlab-logs
          mountPath: /var/log/gitlab
        - name: gitlab-data
          mountPath: /var/opt/gitlab
