gitlab/eee.yaml
apiVersion: v1
items:
- apiVersion: apps/v1
  kind: Deployment
  metadata:
    annotations:
      deployment.kubernetes.io/revision: "2"
      kubectl.kubernetes.io/last-applied-configuration: |
        {"apiVersion":"apps/v1","kind":"Deployment","metadata":{"annotations":{},"name":"gitlab-deployment","namespace":"gitlab"},"spec":{"replicas":1,"selector":{"matchLabels":{"app":"gitlab"}},"template":{"metadata":{"labels":{"app":"gitlab"}},"spec":{"containers":[{"image":"gitlab/gitlab-ce:latest","name":"gitlab-container","ports":[{"containerPort":80},{"containerPort":22}],"volumeMounts":[{"mountPath":"/etc/gitlab","name":"gitlab-config"},{"mountPath":"/var/log/gitlab","name":"gitlab-logs"} [...]
    creationTimestamp: "2023-08-09T08:21:16Z"
    generation: 2
    name: gitlab-deployment
    namespace: gitlab
    resourceVersion: "998344"
    uid: 1d3ba48a-8059-4700-b765-0ef75fc94d1c
  spec:
    progressDeadlineSeconds: 600
    replicas: 1
    revisionHistoryLimit: 10
    selector:
      matchLabels:
        app: gitlab
    strategy:
      rollingUpdate:
        maxSurge: 25%
        maxUnavailable: 25%
      type: RollingUpdate
    template:
      metadata:
        creationTimestamp: null
        labels:
          app: gitlab
      spec:
        containers:
        - image: gitlab/gitlab-ce:13.1.0
          imagePullPolicy: Always
          name: gitlab-container
          ports:
          - containerPort: 80
            protocol: TCP
          - containerPort: 22
            protocol: TCP
          resources: {}
          terminationMessagePath: /dev/termination-log
          terminationMessagePolicy: File
          volumeMounts:
          - mountPath: /etc/gitlab
            name: gitlab-config
          - mountPath: /var/log/gitlab
            name: gitlab-logs
          - mountPath: /var/opt/gitlab
            name: gitlab-data
        dnsPolicy: ClusterFirst
        restartPolicy: Always
        schedulerName: default-scheduler
        securityContext: {}
        terminationGracePeriodSeconds: 30
        volumes:
        - name: gitlab-config
          persistentVolumeClaim:
            claimName: gitlab-config-pvcss
        - name: gitlab-logs
          persistentVolumeClaim:
            claimName: gitlab-logs-pvcss
        - name: gitlab-data
          persistentVolumeClaim:
            claimName: gitlab-data-pvcss
  status:
    availableReplicas: 1
    conditions:
    - lastTransitionTime: "2023-08-09T08:21:16Z"
      lastUpdateTime: "2023-08-09T08:35:19Z"
      message: ReplicaSet "gitlab-deployment-74f7ccfbd9" has successfully progressed.
      reason: NewReplicaSetAvailable
      status: "True"
      type: Progressing
    - lastTransitionTime: "2023-08-09T08:38:47Z"
      lastUpdateTime: "2023-08-09T08:38:47Z"
      message: Deployment has minimum availability.
      reason: MinimumReplicasAvailable
      status: "True"
      type: Available
    observedGeneration: 2
    readyReplicas: 1
    replicas: 1
    updatedReplicas: 1
kind: List
metadata:
  resourceVersion: ""
